// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/splitter/demo/collapsible.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="box-shadow:0 0 10px rgba(0, 0, 0, 0.1);height:200px"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="20"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
      <div
        class="ant-splitter-bar-collapse-bar ant-splitter-bar-collapse-bar-start"
      >
        <span
          aria-label="left"
          class="anticon anticon-left ant-splitter-bar-collapse-icon ant-splitter-bar-collapse-start"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-splitter-bar-collapse-bar ant-splitter-bar-collapse-bar-end"
      >
        <span
          aria-label="right"
          class="anticon anticon-right ant-splitter-bar-collapse-icon ant-splitter-bar-collapse-end"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
  <div
    class="ant-splitter ant-splitter-vertical"
    style="box-shadow:0 0 10px rgba(0, 0, 0, 0.1);height:300px"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="20"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
      <div
        class="ant-splitter-bar-collapse-bar ant-splitter-bar-collapse-bar-start"
      >
        <span
          aria-label="up"
          class="anticon anticon-up ant-splitter-bar-collapse-icon ant-splitter-bar-collapse-start"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </div>
      <div
        class="ant-splitter-bar-collapse-bar ant-splitter-bar-collapse-bar-end"
      >
        <span
          aria-label="down"
          class="anticon anticon-down ant-splitter-bar-collapse-icon ant-splitter-bar-collapse-end"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/control.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height:200px;box-shadow:0 0 10px rgba(0, 0, 0, 0.1)"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          First
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Second
        </h5>
      </div>
    </div>
  </div>
  <div
    class="ant-flex ant-flex-justify-space-between ant-flex-gap-middle"
  >
    <button
      aria-checked="true"
      class="ant-switch ant-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          Enabled
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          Disabled
        </span>
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Reset
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/splitter/demo/debug.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <h3
    class="ant-typography"
  >
    [true, 0, false]
  </h3>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height:200px;box-shadow:0 0 10px rgba(0, 0, 0, 0.1)"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="50"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
    </div>
    <div
      class="ant-splitter-panel ant-splitter-panel-hidden"
      style="flex-basis:0"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          2
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="50"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          3
        </h5>
      </div>
    </div>
  </div>
  <h3
    class="ant-typography"
  >
    [false, 0, true]
  </h3>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height:200px;box-shadow:0 0 10px rgba(0, 0, 0, 0.1)"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="50"
      aria-valuemin="0"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger ant-splitter-bar-dragger-disabled"
      />
    </div>
    <div
      class="ant-splitter-panel ant-splitter-panel-hidden"
      style="flex-basis:0"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          2
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="50"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          3
        </h5>
      </div>
    </div>
  </div>
  <h3
    class="ant-typography"
  >
    Start have min & max
  </h3>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height:200px;box-shadow:0 0 10px rgba(0, 0, 0, 0.1)"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="50"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          2
        </h5>
      </div>
    </div>
  </div>
  <h3
    class="ant-typography"
  >
    End have min & max
  </h3>
  <div
    class="ant-splitter ant-splitter-horizontal"
    style="height:200px;box-shadow:0 0 10px rgba(0, 0, 0, 0.1)"
  >
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          1
        </h5>
      </div>
    </div>
    <div
      aria-valuemax="80"
      aria-valuemin="30"
      aria-valuenow="50"
      class="ant-splitter-bar"
      role="separator"
    >
      <div
        class="ant-splitter-bar-dragger"
      />
    </div>
    <div
      class="ant-splitter-panel"
      style="flex-basis:50px"
    >
      <div
        class="ant-flex ant-flex-align-center ant-flex-justify-center"
        style="height:100%"
      >
        <h5
          class="ant-typography ant-typography-secondary"
          style="white-space:nowrap"
        >
          Panel 
          <!-- -->
          2
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/group.tsx correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal"
  style="height:300px;box-shadow:0 0 10px rgba(0, 0, 0, 0.1)"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis:50px"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height:100%"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space:nowrap"
      >
        Left
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
    <div
      class="ant-splitter-bar-collapse-bar ant-splitter-bar-collapse-bar-start"
    >
      <span
        aria-label="left"
        class="anticon anticon-left ant-splitter-bar-collapse-icon ant-splitter-bar-collapse-start"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis:50px"
  >
    <div
      class="ant-splitter ant-splitter-vertical"
    >
      <div
        class="ant-splitter-panel"
        style="flex-basis:50px"
      >
        <div
          class="ant-flex ant-flex-align-center ant-flex-justify-center"
          style="height:100%"
        >
          <h5
            class="ant-typography ant-typography-secondary"
            style="white-space:nowrap"
          >
            Top
          </h5>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="ant-splitter-bar"
        role="separator"
      >
        <div
          class="ant-splitter-bar-dragger"
        />
      </div>
      <div
        class="ant-splitter-panel"
        style="flex-basis:50px"
      >
        <div
          class="ant-flex ant-flex-align-center ant-flex-justify-center"
          style="height:100%"
        >
          <h5
            class="ant-typography ant-typography-secondary"
            style="white-space:nowrap"
          >
            Bottom
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/multiple.tsx correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal"
  style="height:200px;box-shadow:0 0 10px rgba(0, 0, 0, 0.1)"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis:33.33333333333333px"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height:100%"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space:nowrap"
      >
        Panel 
        <!-- -->
        1
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="67"
    aria-valuemin="0"
    aria-valuenow="33"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
    <div
      class="ant-splitter-bar-collapse-bar ant-splitter-bar-collapse-bar-start"
    >
      <span
        aria-label="left"
        class="anticon anticon-left ant-splitter-bar-collapse-icon ant-splitter-bar-collapse-start"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-splitter-bar-collapse-bar ant-splitter-bar-collapse-bar-end"
    >
      <span
        aria-label="right"
        class="anticon anticon-right ant-splitter-bar-collapse-icon ant-splitter-bar-collapse-end"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis:33.33333333333333px"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height:100%"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space:nowrap"
      >
        Panel 
        <!-- -->
        2
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="33"
    aria-valuenow="67"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis:33.33333333333333px"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height:100%"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space:nowrap"
      >
        Panel 
        <!-- -->
        3
      </h5>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/nested-in-tabs.tsx correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top"
>
  <div
    class="ant-tabs-nav"
    role="tablist"
  >
    <div
      class="ant-tabs-nav-wrap"
    >
      <div
        class="ant-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ant-tabs-tab ant-tabs-tab-active"
          data-node-key="1"
        >
          <div
            aria-selected="true"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            General
          </div>
        </div>
        <div
          class="ant-tabs-tab"
          data-node-key="2"
        >
          <div
            aria-selected="false"
            class="ant-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            Splitter Tab
          </div>
        </div>
        <div
          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ant-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-tabs-content-holder"
  >
    <div
      class="ant-tabs-content ant-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        Content of Tab Pane 1
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/size.tsx correctly 1`] = `
<div
  class="ant-splitter ant-splitter-horizontal"
  style="height:200px;box-shadow:0 0 10px rgba(0, 0, 0, 0.1)"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis:40px"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height:100%"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space:nowrap"
      >
        First
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="70"
    aria-valuemin="20"
    aria-valuenow="40"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis:60px"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height:100%"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space:nowrap"
      >
        Second
      </h5>
    </div>
  </div>
</div>
`;

exports[`renders components/splitter/demo/vertical.tsx correctly 1`] = `
<div
  class="ant-splitter ant-splitter-vertical"
  style="height:300px;box-shadow:0 0 10px rgba(0, 0, 0, 0.1)"
>
  <div
    class="ant-splitter-panel"
    style="flex-basis:50px"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height:100%"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space:nowrap"
      >
        First
      </h5>
    </div>
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="ant-splitter-bar"
    role="separator"
  >
    <div
      class="ant-splitter-bar-dragger"
    />
  </div>
  <div
    class="ant-splitter-panel"
    style="flex-basis:50px"
  >
    <div
      class="ant-flex ant-flex-align-center ant-flex-justify-center"
      style="height:100%"
    >
      <h5
        class="ant-typography ant-typography-secondary"
        style="white-space:nowrap"
      >
        Second
      </h5>
    </div>
  </div>
</div>
`;
